--- a/css/style.css
+++ b/css/style.css
@@ -1,58 +1,13 @@
-* {
+:root {
   box-sizing: border-box;
+}
+
+*,
+::before,
+::after {
+  box-sizing: inherit;
   margin: 0;
   padding: 0;
   border: 0;
 }
-:root {
-  font-size: 1.785rem;
-  font-family: "Lato", sans-serif;
-  --blue: #0d6efd;
-  --indigo: #6610f2;
-  --purple: #6f42c1;
-  --pink: #d63384;
-  --red: #dc3545;
-  --orange: #fd7e14;
-  --yellow: #ffc107;
-  --green: #198754;
-  --teal: #20c997;
-  --cyan: #0dcaf0;
-  --dark: #292a2b;
-}
-section {
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  background-color: var(--dark);
-  height: 50vh;
-}
-div {
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  width: 20%;
-  height: 50%;
-  padding: .5em;
-  background-color: var(--green);
-  font-size: 5rem;
-  transition: all 3s ease-in-out;
-}
-.light {
-  background-color: var(--green);
-  color: white;
-  transition: all 3s ease-in-out;
-}
-
-.dark {
-  background-color: var(--yellow);
-  color: (var(--dark));
-  transition: all 3s ease-in-out;
-}
-.disappear {
-    opacity: 0;
-}
-
-.margin {
-  width: 80%;
-  margin: 2em auto;
-}
+/*# sourceMappingURL=style.css.map */
