--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Fredoka:wght@300;500;700&family=Lato:wght@300;400;700&family=Smooch+Sans:wght@300;500;700&display=swap");
 :root {
   box-sizing: border-box;
   font-size: fSizes(initial);
@@ -14,6 +15,203 @@
 }
 
 body {
-  background-image: linear-gradient(to right, white, #b5b5b5);
+  width: 100%;
+  height: 100vh;
+  font-family: "Lato", sans-serif;
+  background: #200122;
+  /* fallback for old browsers */
+  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #200122, #6f0000);
+  /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+}
+
+h1 {
+  font-family: "Smooch Sans", sans-serif;
+  font-size: 3.9rem;
+}
+
+.main {
+  background-color: white;
+  width: 80%;
+  margin: 10% auto;
+  padding: 2em;
+}
+
+.main .container {
+  overflow-x: auto;
+}
+
+.main form {
+  width: 100%;
+}
+
+.main label {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.main label div {
+  width: 20%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0.5em;
+  background-color: #0d6efd;
+  min-height: 60px;
+  font-size: 1.1rem;
+  border-top-right-radius: 0.3rem;
+  border-bottom-right-radius: 0.3rem;
+  transition: all 0.4s ease-in-out;
+}
+
+.main label div:hover {
+  background-color: #0b5ed7;
+}
+
+.main label div .fa-solid {
+  transition: all 0.4s ease-in-out;
+}
+
+.main label div .fa-solid:hover {
+  transform: translateX(10px);
+}
+
+.main input {
+  display: block;
+  width: 80%;
+  background-color: #bee5e3;
+  padding: 0.5em;
+  min-height: 60px;
+  font-size: 1.1rem;
+  border-top-left-radius: 0.3rem;
+  border-bottom-left-radius: 0.3rem;
+  transition: all 0.15s ease-in-out;
+}
+
+.main input::placeholder {
+  color: #292a2b;
+}
+
+.main input:focus {
+  border: 5px solid transparent;
+  border-radius: 0.3rem;
+  background-color: white;
+  box-shadow: 0 0 0 0 0.25rem rgba(13, 110, 253, 0.25);
+}
+
+.main .alert {
+  width: 100%;
+  height: auto;
+  opacity: 1;
+  margin: 1em auto;
+  padding: 1em;
+  border-radius: 0.3rem;
+  background-color: #d63384;
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  transition: all 0, 3s linear;
+}
+
+.main .alert .fa-square-xmark {
+  font-size: 1.9rem;
+}
+
+.main .alert .fa-square-xmark:hover {
+  color: #292a2b;
+}
+
+table {
+  width: 100%;
+  border-spacing: 0;
+  border-collapse: collapse;
+  border-radius: 0.3rem;
+  margin: 2em auto;
+}
+
+table tr {
+  background-color: #dcd8d8;
+}
+
+table tr:nth-of-type(odd) {
+  background-color: #e9e9e9;
+}
+
+table th {
+  background-color: #2980b9;
+  padding: 0.5em;
+  font-weight: 700;
+  font-size: 1.9rem;
+  text-transform: capitalize;
+}
+
+table th th:first-child {
+  border-top-left-radius: 0.3rem;
+}
+
+table th th:last-child {
+  border-top-right-radius: 0.3rem;
+}
+
+table td {
+  font-family: "Fredoka", sans-serif;
+  padding: 0.8em;
+}
+
+table td:first-child {
+  width: 70%;
+  font-size: 1.9rem;
+}
+
+table td:nth-child(2),
+table td:nth-child(3) {
+  width: 15%;
+  font-size: 1.1rem;
+}
+
+table .fa-2x {
+  font-size: 1.3em;
+  color: #ffc107;
+  transition: all 0.3s ease-in-out;
+}
+
+table .fa-2x:hover {
+  transform: scale(1.2);
+  color: #ffca2c;
+}
+
+table td:nth-child(3) .fa-2x {
+  color: #dc3545;
+}
+
+table td:nth-child(3) .fa-2x:hover {
+  color: #bb2d3b;
+}
+
+table .fa-circle-check {
+  color: green;
+  margin-right: 15px;
+  transition: all 0.3s ease-in-out;
+}
+
+table .fa-circle-check:hover {
+  color: #20c997;
+  transform: scale(1.2);
+}
+
+.dismissable {
+  opacity: 0 !important;
+  height: 0 !important;
+  padding: 0 !important;
+  transition: all 0.3s linear;
+}
+
+.editable {
+  background-color: white;
+  display: inline-block;
+  padding: .3em;
+  border-radius: .3rem;
+  margin-top: .3em;
 }
 /*# sourceMappingURL=style.css.map */
