--- a/css/style.css
+++ b/css/style.css
@@ -1,217 +1,30 @@
-@import url("https://fonts.googleapis.com/css2?family=Fredoka:wght@300;400;500;700&family=Lato:wght@100;300;400;700&family=Open+Sans&family=Roboto&family=Smooch+Sans:wght@100;300;400;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Antic+Slab&family=Comfortaa:wght@500;600&family=Kameron:wght@400;700&family=Pacifico&display=swap");
+
 :root {
-  box-sizing: border-box;
-  font-size: fSizes(initial);
+  font-size: 0.785rem;
 }
-
-*,
-::after,
-::before {
-  border: 0;
-  padding: 0;
-  margin: 0;
-  outline: 0;
-  box-sizing: inherit;
-}
-
 body {
-  font-family: "Lato", sans-serif;
-  background: #200122;
-  /* fallback for old browsers */
-  /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to right, #200122, #6f0000);
-  /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-  width: 100%;
+  font-family: "Antic Slab", serif;
   height: 100vh;
+  padding-top: 11.5rem;
 }
 
-h1 {
-  font-family: "Smooch Sans", sans-serif;
-  font-size: 3.9rem;
+h5 {
+  font-family: "Pacifico", cursive;
 }
 
-.main {
-  width: 80%;
-  margin: 10% auto;
-  padding: 2em;
-  background-color: #fff;
-}
-
-.main .container {
-  overflow-x: auto;
-}
-
-.main form {
-  width: 100%;
-}
-
-.main label {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.main label div {
-  width: 20%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 0.5em;
-  background-color: #0d6efd;
-  min-height: 60px;
-  font-size: 1.1rem;
-  border-radius: 0 0.3rem 0.3rem 0;
-  transition: all 0.4s ease-in-out;
-  cursor: pointer;
-}
-
-.main label div:hover {
-  background-color: #0b5ed7;
-}
-
-.main label div .fa-solid {
-  transition: all 0.4s ease-in-out;
-}
-
-.main label div .fa-solid:hover {
-  transform: translateX(10px);
-}
-
-.main label input {
-  display: block;
-  width: 80%;
-  background-color: #bee5e3;
-  padding: 0.5em;
-  min-height: 60px;
-  font-size: 1.1rem;
-  border-radius: 0.3rem 0 0 0.3rem;
-  transition: all 0.15s ease-in-out;
-}
-
-.main label input::placeholder {
-  color: #292a2b;
-}
-
-.main label input:focus {
-  border: 5px solid transparent;
-  border-radius: 0.3rem;
-  background-color: #fff;
-  box-shadow: 0 0 0 0.25rem rgba(13, 110, 253, 0.25);
-}
-
-.main .alert {
-  width: 100%;
-  height: auto;
-  opacity: 1;
-  margin: 1em auto;
-  padding: 1em;
-  border-radius: 0.3rem;
-  background-color: #d63384;
-  display: flex;
-  justify-content: space-between;
-  align-items: flex-start;
-  transition: all .3s linear;
-}
-
-.main .alert .fa-rectangle-xmark {
-  font-size: 1.5rem;
-}
-
-.main .alert .fa-rectangle-xmark:hover {
-  color: #292a2b;
-}
-
-table {
-  width: 100%;
-  border-spacing: 0;
-  border-collapse: collapse;
-  border-radius: 0.3rem;
-  margin: 2em auto;
-}
-
-table tr {
-  background-color: #f6f6f6;
-}
-
-table tr:nth-of-type(odd) {
-  background-color: #e9e9e9;
-}
-
-table th {
-  background-color: #2980b9;
-  padding: .5em;
-  font-weight: 700;
-  font-size: 1.5rem;
-  text-transform: capitalize;
-}
-
-table th:first-child {
-  border-radius: .3rem 0 0 0;
-}
-
-table th:last-child {
-  border-radius: 0 .3rem 0 0;
-}
-
-table td {
-  font-family: "Fredoka", sans-serif;
-  padding: .8em;
-}
-
-table td:first-child {
-  width: 70%;
-  font-size: 1.5rem;
-}
-
-table td:nth-child(2), table td:nth-child(3) {
-  width: 15%;
-  font-size: 1.1rem;
-}
-
-table .fa-2x {
-  font-size: 1.3em;
+.logo {
+  font-size: 1.9rem;
   color: #ffc107;
-  transition: all .3s ease-in-out;
-  cursor: pointer;
 }
 
-table .fa-2x:hover {
-  transform: scale(1.2);
-  color: #ffca2c;
+.fa-bag-shopping {
+  color: #222;
+  transform: rotate(25deg);
 }
 
-table td:nth-child(3) .fa-2x {
-  color: #dc3545;
+.fa-basket-shopping {
+  color: #fefefe;
+  opacity: 1;
+  transition: all 0.2 ease;
 }
-
-table td:nth-child(3) .fa-2x:hover {
-  color: #bb2d3b;
-}
-
-table .fa-circle-check {
-  color: #198754;
-  margin: 0 15px 0 0;
-  transition: all .3s ease-in-out;
-  cursor: pointer;
-}
-
-table .fa-circle-check:hover {
-  color: #20c997;
-  transform: scale(1.2);
-}
-
-.dismissible {
-  opacity: 0 !important;
-  height: 0 !important;
-  padding: 0 !important;
-  transition: all .3s linear;
-}
-
-.editable {
-  background-color: #fff;
-  display: inline-block;
-  padding: .3em;
-  border-radius: .3rem;
-  margin: .3em 0 0 0;
-}
-/*# sourceMappingURL=style.css.map */
