--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,21 @@
+@font-face {
+  font-family: "ds-digit";
+  src: url("../fonts/DS-DIGI.TTF");
+}
 * {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
   border: 0;
+  padding: 0;
+  margin: 0;
+  outline: 0;
+  -webkit-box-sizing: inherit;
+          box-sizing: inherit;
 }
 :root {
-  font-size: 1.785rem;
-  font-family: "Lato", sans-serif;
+  font-size: 0.785rem;
+  font-family: "Rubik", sans-serif;
   --blue: #0d6efd;
   --indigo: #6610f2;
   --purple: #6f42c1;
@@ -17,85 +26,166 @@
   --green: #198754;
   --teal: #20c997;
   --cyan: #0dcaf0;
-  --dark: #292a2b;
+  --gray-500: #adb5bd;
+  --black: #000;
 }
-/*
-section {
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  background-color: var(--dark);
-  height: 50vh;
-}
-div {
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  width: 20%;
-  height: 50%;
-  padding: .5em;
-  background-color: var(--green);
-  font-size: 5rem;
-  transition: all 3s ease-in-out;
-}
-.light {
-  background-color: var(--green);
+body {
+  width: 100%;
+  height: 100vh;
+  background-color: var(--black);
+  background-image: url("../img/stadium-bg.png");
+  background-position: center center;
+  background-size: 100% 100%;
+  text-align: center;
+  padding: 4em 2em;
   color: white;
-  transition: all 3s ease-in-out;
+  font-family: "Fredoka", sans-serif;
 }
-
-.dark {
-  background-color: var(--yellow);
-  color: (var(--dark));
-  transition: all 3s ease-in-out;
-}
-.disappear {
-    opacity: 0;
-}
-
-.margin {
-  width: 80%;
-  margin: 2em auto;
-}
-
-//CSS ejemplo de preventdefault
-
-body {
-  background-color: black;
-  padding: 2em;
-}
-section {
-  background-color: green;
-  min-height: 20vh;
+/* .logo {
   width: 60%;
-  padding: 2em;
+  height: 5vh;
+  margin: 5% auto;
+} */
+img.logo {
+  max-width: 150px;
+  height: auto;
+  margin-top: 7em;
 }
-div {
-  background-color: blue;
-  min-height: 10vh;
+
+.scoreboard {
+  width: 65%;
+  /* height: 15vh; */
+  margin: -15px auto 0;
+  position: relative;
+  z-index: 100;
+  /* max-height: 400px; */
+  background-image: url("../img/scoreboard-bg.png");
+  background-position: center center;
+  background-size: 100% 100%;
+  padding: 2em;
+  font-weight: bold;
+}
+.row.top {
+  text-transform: uppercase;
+  display: flex;
+  justify-content: space-around;
+  align-items: flex-end;
+  font-size: 1.2rem;
+}
+.row.top span:first-child,
+.row.top span:last-child {
+  margin-bottom: 10px;
+}
+.row.top span {
+  width: 33.3%;
+  text-align: center;
+  margin-bottom: 0.1em;
+}
+.row.top img {
+  max-width: 70%;
+}
+.row.bottom {
+  display: flex;
+  justify-content: space-around;
+}
+.row.bottom div {
+  width: 30%;
+  height: 90px;
+  font-family: "ds-digit";
+  color: var(--red);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 5rem;
+  font-weight: lighter;
+  /* border: 1px solid red; */
+}
+.row.bottom div:first-child,
+.row.bottom div:last-child {
+  background-image: url("../img/big-box.png");
+  background-position: center center;
+  background-size: 100% 100%;
+}
+.row.bottom div:nth-child(2) {
+  display: block;
+  /* flex-direction: column; */
+}
+.row.bottom div:nth-child(2) span {
+  margin-top: 1.7em;
+  margin-bottom: 0.5em;
+  display: block;
+  font-size: 0.8rem;
+  color: white;
+  font-family: "Fredoka", "sans-serif";
+  /* height: 50%; */
+}
+.row.bottom div.round {
+  background-image: url("../img/small-box.png");
+  background-position: center center;
+  background-size: 100% 100%;
   width: 40%;
-  padding: 2em;
+  margin: 0.3em auto;
+  height: 40px !important;
+  font-size: 3rem;
 }
-
-//CSS ejemplo de drag&drop
-
-body {
-  background-color: black;
+.display {
+  width: 80%;
+  min-height: 8vh;
+  margin: 1em auto;
+  max-height: 200px;
+  background-image: url("../img/display.png");
+  background-position: center center;
+  background-size: 100% 100%;
+  font-family: "ds-digit";
+  font-size: 2rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.results {
+  width: 70%;
+  margin: 0 auto;
   display: flex;
   justify-content: space-between;
-  padding: 3em;
+  align-items: center;
 }
-
-#Uno {
-  background-color: var(--blue);
+.results div {
+  width: 33%;
+  text-align: center;
 }
-
-#Dos {
-  background-color: var(--green);
+.results div img {
+  width: 100%;
+  height: auto;
 }
-
-div {
+.play {
+  position: relative;
   width: 30%;
-  height: 20vh;
+  margin: 2em auto;
+  padding: .4em;
+  border: 1px solid white;
+  border-radius: 0.7rem;
+  display: flex;
+  justify-content: space-around;
 }
-*/
+.play div {
+  width: 30%;
+  padding: .4em;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.play div img {
+  width: 80%;
+  height: auto;
+}
+.play span {
+  display: inline-block;
+  position: absolute;
+  left: 38%;
+  top: -8px;
+  border-left: 5px solid transparent;
+  border-right: 5px solid transparent;
+  border-radius: .5rem;
+  background-color: var(--green);
+  font-weight: bold;
+}
